# ewo-core

./: .bumpversion.cfg  .gitignore  .rtd-environment.yml  .travis.sh  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  Makefile.am  README.md  README.rst  configure.ac  readthedocs.yml  requirements.txt  requirements_dev.txt  requirements_docs.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: 01-getting-started.rst  02-building.rst  conf.py  index.rst
documentation/: Makefile
documentation/source/: 00-glossary.rst  01-getting-started.rst  03-coding-guideline.rst
ewo/: __init__.py  audio.py  cli.py  utils.py
sources/: Makefile.am  audio.c  audio.h  main.c  ringbuffer.h  signal.c  tools.c  tools.h
src/: Makefile  Makefile.am  audio.c  audio.h  filters.c  filters.h  main.c  parser.c  parser.h  ringbuffer.c  ringbuffer.h  tools.c  tools.h
src/config/: default.json
test/: Makefile.am  test_tools.c
tests/: test_audio.py  test_cli.py  test_ewo.py  test_utils.py
tools/: Makefile  Makefile.am  devices_info.c
